hphp/test/quick/typedef_duplicate.php.expectf

Fatal error: The type MyType is already defined to an incompatible type in %s on line 10
